--- a/index.html
+++ b/index.html
@@ -5,3 +5,8 @@
  </html>
  </center>
  <marquee>weeeeeeeee</marquee>
+ 
+ <h2>Engineering Journal</h2>
+ <br>
+ <p>9/23 - This week we were building our rube goldberg machine.</p>
+ 
