--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <center>
- <h1>Hello world!</h1> 
+ <h1>Hello world!</h1>
  <h2> This is my first website</h2>
  </html>
  </center>
@@ -10,3 +10,12 @@
  <br>
  <p>9/23 - This week we were building our rube goldberg machine.</p>
  
+ </html>
+ <body bgcolor="#e41b77">
+ 
+ <video width="900" hight="600" controls="" loop="">
+ <source src="RGB2.mp4" type="video/mp4">
+ </video>
+ 
+ </body>
+ </html>
