--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <body bgcolor="#e41b77">
  
  <video width="900" hight="600" controls="" loop="">
- <source src="RGB2.mp4" type="video/mp4">
+ <source src="video.mp4" type="video/mp4">
  </video>
  
  </body>
