--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p>9/16 - This week we started designing our rube goldberg project on tinkercad </p>
 <p>9/23 - This week we were building our rube goldberg machine.</p>
 <p>10/3 - This week we made a tinkercad on prosthetics. </p>
+<p>10/10 - This week we started cadding a rocket on tinkercad</p>
 
           <a href="https://youtube.com/shorts/c_2BZswGNlY?feature=share">link </a>
           
@@ -21,11 +22,15 @@
           <p>This link will take you to a video of our rube goldberg and what we did. Our design was to drop the baseball into the cup and the cup would hit the car and push it down. Once the car is pushed down it will pop the ballon with the needle taped on to the car.  </p>
  
       </body> <br> <br> <br> <br> <br>
-   <img src="Screenshot 2022-10-05 12.09.38 PM.png" width="250" hight="150">
+   <img src="dk.png" width="250" hight="150">
      <p>  This is a picture of a duck with a prosthetic. I made this on tinkercad. The reason i made this was because we were assigned to make a prosthetic for an animal. But the reason i chose a duck was because they are very underated/forgoten and i wanted to design my own for them.</p>
      
-     <img src="microwave.png" width="250" high="150">
+     <img src="micrwave.png" width="250" hight="150">
      <p> This is my home applience. I made a microwave on tinkercad. I couldnt finish the numbers you hit to put the time but i finished everything else.</p>
+
+   <img src="rocket.png" width="250" hight="150">
+    <p> This is the rocket i designed.</p>
+
 
 
 </html>
