--- a/journal.html
+++ b/journal.html
@@ -41,8 +41,8 @@ ul {
  <h2>Engineering Journal</h2>
  
 
-<p>9/2 - This week we worked on a CAD challage building a kitchen appliance</p> 
-<p>9/16 - This week we started designing our rube goldberg project on tinkercad </p>
+<p>9/2 - This week we worked on a CAD challage building a kitchen appliance. I wanted to CAD a microwave due to the fact that i use it everyday. </p> 
+<p>9/16 - This week we started designing our rube goldberg project on tinkercad. </p>
 <p>9/23 - This week we were building our rube goldberg machine.</p>
 <p>10/3 - This week we made a tinkercad on prosthetics. </p>
 <p>10/10 - This week we started cadding a rocket on tinkercad</p>
@@ -55,12 +55,17 @@ ul {
 <p>12/07 - This week we dessided to change our design. We have already tested twise and they went succesfull. But we want a better outcome.</p>
 <p>12/14 - We are finishing up our final product and everything looks good.</p>         
 <p>12/21 - This is our last week and we are going to test our final roduct</p>          
-<p>01/11 - This week we started learning about buisness engineering.</p>    
+<p>01/11 - This week we started learning about buisness engineering. This is prety much just people pitching ideas and others say if its good or not. We learned about UX and UI as well.Our group also pitched an idea to the class./p>    
 <p>01/18 - This week we started to learn about chemical engineering.</p>
-<p>01/26 - This week we started making/designing our mouse trap car</p>
-<p>02/01 - This week we went into lockdown because of an intruder.</p>
+<p>01/26 - This week we started making/designing our mouse trap car with a cad. We went with a 4 wheel design. We want our cars base to be rulers which wont have a lot of weight on it. And because of that it will go faster and the wheels will work better since there wont be a lot of weight on it.</p>
 <p>02/10 - Today we did a water ballon challenge. </p>     
-<p>03/9 - Throught this six week process my partner and I decided to do the mouse trap car. When we started we struggled with adding on the tires and the base itself. My partner was out for a while due to a sickness so i had to kind of pick up my pace and do the work myself. When he came back we where zooming. We practically finished the whole project in a day. We stayed in during lunch to finish up the project. When the day for testing came we failed and our car didnt move. But since my partner and i were out for a while Mr.Kim gave us an extra day and we completed it. Our car actually went 6 inches, yes we know thats not good but it moved so were happy.<p>
+<p>03/9 - This week we did egg drop. We designed a box with padding and a balloon that would help it gliud down so that an egg could be placed inside and stay intact after falling two stories.
+<p>04/03 - </p> 
+ 
+ 
+ 
+ 
+ 
           
           <a href="https://youtube.com/shorts/c_2BZswGNlY?feature=share">link </a>
           
