--- a/journal.html
+++ b/journal.html
@@ -82,7 +82,7 @@ ul {
  
       </body> <br> <br> <br> <br> <br>
    <img src="dk.png" width="250" hight="150">
-     <p>  This is a picture of a duck with a prosthetic. I made this on tinkercad. The reason i made this was because we were assigned to make a prosthetic for an animal. But the reason i chose a duck was because they are very underated/forgoten and i wanted to design my own for them.</p>
+     <p>  This is a picture of a duck with a prosthetic. I made this on tinkercad. The reason i made this was because i wanted to pick an animal that the whole class wasnt doing..</p>
      
      <img src="micrwave.png" width="250" hight="150">
      <p> This is my home applience. I made a microwave on tinkercad. I couldnt finish the numbers you hit to put the time but i finished everything else.</p>
